2006-05-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/stress_threads.c: Add string.h to avoid compiler warning.

2006-04-11  Sergei Organov <osv@javad.com>

	* doc/kernel.sgml: Fix typo

2006-03-27  Marco Cruz  <marco@daruma.com.br>

	* include/thread.hxx: removed extra qualifier of
	Cyg_Thread::reinitialize() to permit compile on gcc 4.1.0
	* include/sched.hxx: removed extra qualifier of
	Cyg_Scheduler::thread_entry to permit compile on gcc 4.1.0

2006-02-14  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/timeslice.c  (STACK_SIZE): Reduce the stack size so it will
	compile on targets wit h only small amounts of RAM.
	* tests/fptest.c: Calculate the size of ftp2_values array to fit
	the amount of RAM in small systems.
	* tests/clocktruth.cxx: Fix the header.
	
2006-01-19  Nick Garnett  <nickg@ecoscentric.com>

	* src/sched/sched.cxx (thread_entry): Fixed a bug which could
	cause a thread to be started with a non-zero scheduler lock. The
	previous code only decremented it by 1 so if the previous thread
	was executing with the lock > 1 the thread ended up with a
	non-zero lock. This is fixed by decrementing the lock in a loop
	until it reaches zero.

	* src/common/thread.cxx (idle_thread_main): Added an assert for a
	non-zero scheduler lock.

2006-01-10  Nick Garnett  <nickg@ecoscentric.com>

	* src/sched/sched.cxx: 
	* include/sched.hxx (class Cyg_Scheduler): Added thread_entry()
	member function. This handles thread startup housekeeping. Zeroing
	the scheduler lock is handled by calling unlock() so that DSRs may
	be run.

	* src/common/thread.cxx (thread_entry): Refactored code to call
	Cyg_Scheduler::thread_entry() instead of doing all the work here.	

2005-11-23  Sergei Organov  <osv@javad.com>

	* doc/kernel.sgml: Fix description of CYG_ISR_CALL_DSR and
	CYG_ISR_HANDLED. Fix example isr_function() accordingly.

2005-10-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/flag.hxx: We need thread.inl for the empty() function