@@ -1,4 +1,3 @@
-
 #include <pkgconf/kernel.h>
 #include <cyg/kernel/ktypes.h>         // base kernel types
 #include <cyg/kernel/instrmnt.h>
@@ -23,7 +22,7 @@ struct Instrument_Record
 #ifdef CYGDBG_KERNEL_INSTRUMENT_MSGS
 #define CYGDBG_KERNEL_INSTRUMENT_MSGS_DEFINE_TABLE
 #include <cyg/kernel/instrument_desc.h>
-#define NELEM(x) (sizeof(x)/sizeof*(x))
+
 externC char * cyg_instrument_msg(CYG_WORD16 type) {
 
   struct instrument_desc_s *record;
@@ -31,7 +30,7 @@ externC char * cyg_instrument_msg(CYG_WORD16 type) {
   CYG_WORD cl, event;
 
   record = instrument_desc;
-  end_record = &instrument_desc[NELEM(instrument_desc)-1];
+  end_record = &instrument_desc[CYG_NELEM(instrument_desc)-1];
   cl = type & 0xff00;
   event = type & 0x00ff;
 
